[package]
authors = ["deciduously <ben@deciduously.com>"]
edition = "2018"
name = "hunt-the-wumpus"
version = "0.1.0"
[[bin]]
name = "hunt"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"

[dependencies.yew]
git = "https://github.com/DenisKolodin/yew"

[lib]
name = "hunt_the_wumpus"
path = "src/lib.rs"
